@@ -1525,7 +1525,7 @@ function deliverMessage(&$composeMessage, $draft=false) {
     if (!$rfc822_header->from[0]->host) $rfc822_header->from[0]->host = $domain;
     if ($full_name) {
         $from = $rfc822_header->from[0];
-        $full_name_encoded = encodeHeader($full_name);
+        $full_name_encoded = encodeHeader('"' . $full_name . '"');
         if ($full_name_encoded != $full_name) {
             $from_addr = $full_name_encoded .' <'.$from->mailbox.'@'.$from->host.'>';
         } else {
