@@ -13,6 +13,7 @@ Version 1.4.20 - SVN
     patch.
   - Make base URL autodetection more robust; fixes some lighttpd issues
     (probably #1741469).
+  - Encoded From headers now properly quoted (#2830141).
 
 Version 1.4.20 RC2 - 17 Aug 2009
 --------------------------------
